--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1,21 +1,38 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "# This jupyter notebook will be used for the IBM Data Science Program Capstone Project."
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "source": [
+    "import pandas as pd\r\n",
+    "import numpy as np"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "source": [
+    "print(\"Hello Capstone Project Course!\")"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "made my notebook\n"
+      "Hello Capstone Project Course!\n"
      ]
     }
    ],
-   "source": [
-    "print(\"made my notebook\")"
-   ]
+   "metadata": {}
   }
  ],
  "metadata": {
@@ -23,8 +40,8 @@
    "hash": "2db524e06e9f5f4ffedc911c917cb75e12dbc923643829bf417064a77eb14d37"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.0 64-bit",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.0 64-bit"
   },
   "language_info": {
    "codemirror_mode": {
