--- a/clustering1.ipynb
+++ b/clustering1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# This is my notebook for scraping toronto neighbourhoods"
+    "# This is my notebook for clustering toronto neighbourhoods"
    ],
    "metadata": {}
   },
@@ -11,12 +11,14 @@
    "cell_type": "code",
    "execution_count": 18,
    "source": [
+    "# Importing libraries for scraping and formatiing data\r\n",
     "from bs4 import BeautifulSoup\r\n",
     "import requests\r\n",
     "from IPython.display import display_html\r\n",
     "import re\r\n",
     "import geocoder\r\n",
     "\r\n",
+    "# Libraries for clustering data \r\n",
     "import pandas as pd\r\n",
     "from sklearn.cluster import KMeans"
    ],
@@ -27,6 +29,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "source": [
+    "# Fetching data from wikipedia\r\n",
     "url = \"https://en.wikipedia.org/wiki/List_of_postal_codes_of_Canada:_M\"\r\n",
     "response = requests.get(url).text \r\n",
     "soup = BeautifulSoup(response,'lxml')\r\n",
@@ -39,6 +42,8 @@
    "cell_type": "code",
    "execution_count": 11,
    "source": [
+    "#Scraping and formatiing into dataframe\r\n",
+    "\r\n",
     "table_data=[]\r\n",
     "\r\n",
     "for row in table.findAll('td'):\r\n",
@@ -199,6 +204,8 @@
    "cell_type": "code",
    "execution_count": 13,
    "source": [
+    "# Grouping by borough and postal codes\r\n",
+    "\r\n",
     "df2 = df.groupby(['PostalCode','Borough'],sort=False).agg(', '.join)\r\n",
     "df2.reset_index(inplace=True)\r\n",
     "df2"
