--- a/finalproject.ipynb
+++ b/finalproject.ipynb
@@ -297,8 +297,8 @@
     "    url = \"https://api.foursquare.com/v2/venues/search\"\r\n",
     "\r\n",
     "    params = dict(\r\n",
-    "    client_id='ANKZ5PUEEL44TOVQRUZ21QOCPFV3N1YYNVBVXP3Q5FKTVYHT',\r\n",
-    "    client_secret='MAKAGUS25TUWAUNG5JLX2UIWLXC30VC420Q4BNZMS4PKVZKU',\r\n",
+    "    client_id='-',\r\n",
+    "    client_secret='-',\r\n",
     "    v='20180323',\r\n",
     "    query='',\r\n",
     "    limit='5')\r\n",
